added dataset description and split off test data

--- a/preprocessing/daily_data_cleaning_preprocessing.ipynb
+++ b/preprocessing/daily_data_cleaning_preprocessing.ipynb
@@ -104,7 +104,9 @@
     "\n",
     "The preprocessing steps we will then take are:\n",
     "- Add a column for the mean temperature of each bike ride\n",
+    "- Add a column for the difference in minimum and maximum temperatures of each day\n",
     "- Convert ``Daylight``s values, which are in hours, minutes, and seconds to the number of minutes of daylight\n",
+    "- Standardize ``Spd of Max Gust``'s values so that entries in the column are numbers, not strings, and treat ``<31`` as zero so the column will now measure the difference from ``Spd of Max Gust`` to 31.\n",
     "\n",
     "Before we do any of this let us rename columns to have more shorter, more typable names."
    ]
@@ -1446,6 +1448,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9619673f-d88f-4d05-82d7-42e9b70e7369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikeshare['temp_diff'] = bikeshare.max_temp - bikeshare.min_temp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "59e0893c-8244-45f7-a582-4899f9cf74ef",
    "metadata": {},
@@ -1455,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "561edc42-e5d3-432c-a886-deacd544b7c5",
    "metadata": {},
    "outputs": [],
@@ -1469,6 +1481,412 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a3d26c4-8a3d-428c-abf2-744f2137d9e6",
+   "metadata": {},
+   "source": [
+    "Now standardize the values in ``max_gust``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f6b24cea-5645-4341-abe5-9d17079fde27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikeshare.loc[bikeshare.max_gust == '<31', 'max_gust'] = 31\n",
+    "bikeshare.max_gust = bikeshare.max_gust.astype('float64') - 31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "971fcbc5-5340-4861-958d-66f7f98eb4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_trips</th>\n",
+       "      <th>total_dist</th>\n",
+       "      <th>total_duration</th>\n",
+       "      <th>mean_dep_temp</th>\n",
+       "      <th>mean_ret_temp</th>\n",
+       "      <th>ebike_trips</th>\n",
+       "      <th>max_temp</th>\n",
+       "      <th>min_temp</th>\n",
+       "      <th>mean_temp</th>\n",
+       "      <th>hdd</th>\n",
+       "      <th>cdd</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>total_precip</th>\n",
+       "      <th>snow_on_ground</th>\n",
+       "      <th>max_gust</th>\n",
+       "      <th>day_length</th>\n",
+       "      <th>mean_ride_temp</th>\n",
+       "      <th>temp_diff</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>162</td>\n",
+       "      <td>338025.00</td>\n",
+       "      <td>232693.0</td>\n",
+       "      <td>3.555556</td>\n",
+       "      <td>4.296296</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>-2.3</td>\n",
+       "      <td>-0.10</td>\n",
+       "      <td>18.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>497.133333</td>\n",
+       "      <td>3.925926</td>\n",
+       "      <td>4.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>270</td>\n",
+       "      <td>660054.00</td>\n",
+       "      <td>382729.0</td>\n",
+       "      <td>2.718519</td>\n",
+       "      <td>3.688889</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-2.30</td>\n",
+       "      <td>20.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>498.133333</td>\n",
+       "      <td>3.203704</td>\n",
+       "      <td>7.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-03</th>\n",
+       "      <td>384</td>\n",
+       "      <td>635395.00</td>\n",
+       "      <td>376013.0</td>\n",
+       "      <td>0.807292</td>\n",
+       "      <td>1.791667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>-7.8</td>\n",
+       "      <td>-3.70</td>\n",
+       "      <td>21.70</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>499.133333</td>\n",
+       "      <td>1.299479</td>\n",
+       "      <td>8.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-04</th>\n",
+       "      <td>460</td>\n",
+       "      <td>766082.00</td>\n",
+       "      <td>376721.0</td>\n",
+       "      <td>2.767391</td>\n",
+       "      <td>3.643478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>-8.4</td>\n",
+       "      <td>-3.10</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>501.133333</td>\n",
+       "      <td>3.205435</td>\n",
+       "      <td>10.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-05</th>\n",
+       "      <td>524</td>\n",
+       "      <td>888222.00</td>\n",
+       "      <td>524933.0</td>\n",
+       "      <td>2.601145</td>\n",
+       "      <td>3.524809</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>-6.6</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>502.133333</td>\n",
+       "      <td>3.062977</td>\n",
+       "      <td>7.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-26</th>\n",
+       "      <td>3367</td>\n",
+       "      <td>9459383.33</td>\n",
+       "      <td>4193707.0</td>\n",
+       "      <td>13.858925</td>\n",
+       "      <td>14.667360</td>\n",
+       "      <td>1346.0</td>\n",
+       "      <td>14.60</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>11.70</td>\n",
+       "      <td>6.30</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>864.233333</td>\n",
+       "      <td>14.263142</td>\n",
+       "      <td>5.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-27</th>\n",
+       "      <td>1291</td>\n",
+       "      <td>3274519.00</td>\n",
+       "      <td>1443072.0</td>\n",
+       "      <td>10.175058</td>\n",
+       "      <td>10.984508</td>\n",
+       "      <td>547.0</td>\n",
+       "      <td>11.10</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>867.233333</td>\n",
+       "      <td>10.579783</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-28</th>\n",
+       "      <td>2313</td>\n",
+       "      <td>6738587.00</td>\n",
+       "      <td>2859352.0</td>\n",
+       "      <td>11.309987</td>\n",
+       "      <td>11.947687</td>\n",
+       "      <td>851.0</td>\n",
+       "      <td>12.80</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>10.40</td>\n",
+       "      <td>7.60</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>870.233333</td>\n",
+       "      <td>11.628837</td>\n",
+       "      <td>4.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-29</th>\n",
+       "      <td>3929</td>\n",
+       "      <td>11560811.99</td>\n",
+       "      <td>4935558.0</td>\n",
+       "      <td>14.148129</td>\n",
+       "      <td>14.511835</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>9.65</td>\n",
+       "      <td>8.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>874.233333</td>\n",
+       "      <td>14.329982</td>\n",
+       "      <td>6.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-30</th>\n",
+       "      <td>4128</td>\n",
+       "      <td>10996660.33</td>\n",
+       "      <td>4495533.0</td>\n",
+       "      <td>13.904312</td>\n",
+       "      <td>13.994186</td>\n",
+       "      <td>1433.0</td>\n",
+       "      <td>12.70</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>8.90</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>877.233333</td>\n",
+       "      <td>13.949249</td>\n",
+       "      <td>7.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2677 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            num_trips   total_dist  total_duration  mean_dep_temp  \\\n",
+       "Date                                                                \n",
+       "2017-01-01        162    338025.00        232693.0       3.555556   \n",
+       "2017-01-02        270    660054.00        382729.0       2.718519   \n",
+       "2017-01-03        384    635395.00        376013.0       0.807292   \n",
+       "2017-01-04        460    766082.00        376721.0       2.767391   \n",
+       "2017-01-05        524    888222.00        524933.0       2.601145   \n",
+       "...               ...          ...             ...            ...   \n",
+       "2024-04-26       3367   9459383.33       4193707.0      13.858925   \n",
+       "2024-04-27       1291   3274519.00       1443072.0      10.175058   \n",
+       "2024-04-28       2313   6738587.00       2859352.0      11.309987   \n",
+       "2024-04-29       3929  11560811.99       4935558.0      14.148129   \n",
+       "2024-04-30       4128  10996660.33       4495533.0      13.904312   \n",
+       "\n",
+       "            mean_ret_temp  ebike_trips  max_temp  min_temp  mean_temp    hdd  \\\n",
+       "Date                                                                           \n",
+       "2017-01-01       4.296296          0.0      2.20      -2.3      -0.10  18.10   \n",
+       "2017-01-02       3.688889          0.0      1.40      -6.0      -2.30  20.30   \n",
+       "2017-01-03       1.791667          0.0      0.40      -7.8      -3.70  21.70   \n",
+       "2017-01-04       3.643478          0.0      2.20      -8.4      -3.10  21.10   \n",
+       "2017-01-05       3.524809          0.0      0.70      -6.6      -3.00  21.00   \n",
+       "...                   ...          ...       ...       ...        ...    ...   \n",
+       "2024-04-26      14.667360       1346.0     14.60       8.7      11.70   6.30   \n",
+       "2024-04-27      10.984508        547.0     11.10       8.8      10.00   8.00   \n",
+       "2024-04-28      11.947687        851.0     12.80       7.9      10.40   7.60   \n",
+       "2024-04-29      14.511835       1467.0     12.75       6.5       9.65   8.35   \n",
+       "2024-04-30      13.994186       1433.0     12.70       5.1       8.90   9.10   \n",
+       "\n",
+       "            cdd  rain  snow  total_precip  snow_on_ground  max_gust  \\\n",
+       "Date                                                                  \n",
+       "2017-01-01  0.0   0.0   0.0           0.0             3.0      10.0   \n",
+       "2017-01-02  0.0   0.0   0.0           0.0             2.0       0.0   \n",
+       "2017-01-03  0.0   0.0   0.0           0.0             1.0       0.0   \n",
+       "2017-01-04  0.0   0.0   0.0           0.0             1.0       1.0   \n",
+       "2017-01-05  0.0   0.0   0.0           0.0             1.0       0.0   \n",
+       "...         ...   ...   ...           ...             ...       ...   \n",
+       "2024-04-26  0.0   6.6   0.0           6.6             0.0       0.0   \n",
+       "2024-04-27  0.0   6.8   0.0           6.8             0.0       9.0   \n",
+       "2024-04-28  0.0   0.5   0.0           0.5             0.0      15.0   \n",
+       "2024-04-29  0.0   0.0   0.0           0.0             0.0       6.0   \n",
+       "2024-04-30  0.0   0.2   0.0           0.2             0.0       1.0   \n",
+       "\n",
+       "            day_length  mean_ride_temp  temp_diff  \n",
+       "Date                                               \n",
+       "2017-01-01  497.133333        3.925926       4.50  \n",
+       "2017-01-02  498.133333        3.203704       7.40  \n",
+       "2017-01-03  499.133333        1.299479       8.20  \n",
+       "2017-01-04  501.133333        3.205435      10.60  \n",
+       "2017-01-05  502.133333        3.062977       7.30  \n",
+       "...                ...             ...        ...  \n",
+       "2024-04-26  864.233333       14.263142       5.90  \n",
+       "2024-04-27  867.233333       10.579783       2.30  \n",
+       "2024-04-28  870.233333       11.628837       4.90  \n",
+       "2024-04-29  874.233333       14.329982       6.25  \n",
+       "2024-04-30  877.233333       13.949249       7.60  \n",
+       "\n",
+       "[2677 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikeshare"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "49d1764e-6c66-4486-9420-0b771a88f6e8",
    "metadata": {},
    "source": [
@@ -1477,12 +1895,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "766e3b8f-be82-40ac-a946-b7c70bbe0dfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reorganized_columns = ['day_length', 'min_temp', 'max_temp', 'mean_temp', 'hdd', 'cdd', 'rain',\n",
+    "reorganized_columns = ['day_length', 'min_temp', 'max_temp', 'mean_temp', 'temp_diff', 'hdd', 'cdd', 'rain',\n",
     "                      'snow', 'total_precip', 'snow_on_ground', 'max_gust', 'mean_dep_temp', 'mean_ret_temp',\n",
     "                       'mean_ride_temp', 'total_dist', 'total_duration', 'ebike_trips', 'num_trips']\n",
     "bikeshare = bikeshare[reorganized_columns]"
@@ -1490,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "19cc60f4-b40d-44af-a309-791236e69c66",
    "metadata": {
     "scrolled": true
