--- a/models/Prelim Models.ipynb
+++ b/models/Prelim Models.ipynb
@@ -64,152 +64,152 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>2018-05-17</td>\n",
-       "      <td>925.250000</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>18.2</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>462</th>\n",
+       "      <td>2018-04-08</td>\n",
+       "      <td>799.216667</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>19.776475</td>\n",
-       "      <td>20.267426</td>\n",
-       "      <td>20.021950</td>\n",
-       "      <td>8734031.67</td>\n",
-       "      <td>4061884.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2984</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1064</th>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>510.133333</td>\n",
-       "      <td>-5.0</td>\n",
        "      <td>4.4</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>18.3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>13.325428</td>\n",
+       "      <td>14.072464</td>\n",
+       "      <td>13.698946</td>\n",
+       "      <td>2228830.00</td>\n",
+       "      <td>958265.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.419069</td>\n",
-       "      <td>6.440133</td>\n",
-       "      <td>5.929601</td>\n",
-       "      <td>2161227.00</td>\n",
-       "      <td>942761.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>902</td>\n",
+       "      <td>759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>707</th>\n",
-       "      <td>2018-12-09</td>\n",
-       "      <td>498.133333</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>13.0</td>\n",
+       "      <th>1290</th>\n",
+       "      <td>2020-07-14</td>\n",
+       "      <td>950.250000</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>1.8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>18.8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>18.8</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>8.362205</td>\n",
-       "      <td>9.594488</td>\n",
-       "      <td>8.978346</td>\n",
-       "      <td>505696.00</td>\n",
-       "      <td>157508.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>254</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.898175</td>\n",
+       "      <td>25.039385</td>\n",
+       "      <td>24.968780</td>\n",
+       "      <td>9191142.00</td>\n",
+       "      <td>4602276.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>581</th>\n",
-       "      <td>2018-08-05</td>\n",
-       "      <td>895.233333</td>\n",
-       "      <td>15.4</td>\n",
-       "      <td>25.4</td>\n",
-       "      <td>20.4</td>\n",
-       "      <td>10.0</td>\n",
+       "      <th>1471</th>\n",
+       "      <td>2021-01-11</td>\n",
+       "      <td>512.133333</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.4</td>\n",
+       "      <td>15.2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>15.2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>10.593846</td>\n",
+       "      <td>11.560000</td>\n",
+       "      <td>11.076923</td>\n",
+       "      <td>1406360.00</td>\n",
+       "      <td>463574.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>27.984670</td>\n",
-       "      <td>27.764262</td>\n",
-       "      <td>27.874466</td>\n",
-       "      <td>13347195.67</td>\n",
-       "      <td>8151699.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3979</td>\n",
+       "      <td>650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1709</th>\n",
-       "      <td>2021-09-06</td>\n",
-       "      <td>787.216667</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>21.4</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>0.9</td>\n",
+       "      <th>979</th>\n",
+       "      <td>2019-09-07</td>\n",
+       "      <td>785.216667</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>0.4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.374055</td>\n",
+       "      <td>22.349530</td>\n",
+       "      <td>22.361792</td>\n",
+       "      <td>15251756.33</td>\n",
+       "      <td>8616703.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>23.780789</td>\n",
-       "      <td>23.471842</td>\n",
-       "      <td>23.626316</td>\n",
-       "      <td>11141959.33</td>\n",
-       "      <td>5195522.0</td>\n",
+       "      <td>4363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>666</th>\n",
+       "      <td>2018-10-29</td>\n",
+       "      <td>599.150000</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>8.9</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3800</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.324434</td>\n",
+       "      <td>12.578479</td>\n",
+       "      <td>11.951456</td>\n",
+       "      <td>2759425.67</td>\n",
+       "      <td>1071307.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1236</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date  day_length  min_temp  max_temp  mean_temp  temp_diff   hdd  \\\n",
-       "501   2018-05-17  925.250000      11.8      18.2       15.0        6.4   3.0   \n",
-       "1064  2019-12-01  510.133333      -5.0       4.4       -0.3        9.4  18.3   \n",
-       "707   2018-12-09  498.133333       2.9       7.0        5.0        4.1  13.0   \n",
-       "581   2018-08-05  895.233333      15.4      25.4       20.4       10.0   0.0   \n",
-       "1709  2021-09-06  787.216667      12.7      21.4       17.1        8.7   0.9   \n",
+       "            Date  day_length  min_temp  max_temp  mean_temp  temp_diff  hdd  \\\n",
+       "462   2018-04-08  799.216667       7.9      12.2       10.1        4.3  7.9   \n",
+       "1290  2020-07-14  950.250000      11.0      21.3       16.2       10.3  1.8   \n",
+       "1471  2021-01-11  512.133333       7.8      10.1        9.0        2.3  9.0   \n",
+       "979   2019-09-07  785.216667      14.9      20.2       17.6        5.3  0.4   \n",
+       "666   2018-10-29  599.150000       5.9      12.2        9.1        6.3  8.9   \n",
        "\n",
        "      cdd  rain  snow  total_precip  snow_on_ground  max_gust  mean_dep_temp  \\\n",
-       "501   0.0   0.0   0.0           0.0             0.0       1.0      19.776475   \n",
-       "1064  0.0   6.4   0.0           6.4             0.0       0.0       5.419069   \n",
-       "707   0.0  18.8   0.0          18.8             0.0      10.0       8.362205   \n",
-       "581   2.4   0.0   0.0           0.0             0.0      -1.0      27.984670   \n",
-       "1709  0.0   0.0   0.0           0.0             0.0       0.0      23.780789   \n",
+       "462   0.0   4.4   0.0           4.4             0.0      23.0      13.325428   \n",
+       "1290  0.0   0.0   0.0           0.0             0.0       0.0      24.898175   \n",
+       "1471  0.0  15.2   0.0          15.2             0.0      15.0      10.593846   \n",
+       "979   0.0   0.0   0.0           0.0             0.0       2.0      22.374055   \n",
+       "666   0.0  11.8   0.0          11.8             0.0       0.0      11.324434   \n",
        "\n",
        "      mean_ret_temp  mean_ride_temp   total_dist  total_duration  ebike_trips  \\\n",
-       "501       20.267426       20.021950   8734031.67       4061884.0          0.0   \n",
-       "1064       6.440133        5.929601   2161227.00        942761.0          0.0   \n",
-       "707        9.594488        8.978346    505696.00        157508.0          0.0   \n",
-       "581       27.764262       27.874466  13347195.67       8151699.0          0.0   \n",
-       "1709      23.471842       23.626316  11141959.33       5195522.0          0.0   \n",
+       "462       14.072464       13.698946   2228830.00        958265.0          0.0   \n",
+       "1290      25.039385       24.968780   9191142.00       4602276.0          0.0   \n",
+       "1471      11.560000       11.076923   1406360.00        463574.0          0.0   \n",
+       "979       22.349530       22.361792  15251756.33       8616703.0          0.0   \n",
+       "666       12.578479       11.951456   2759425.67       1071307.0          0.0   \n",
        "\n",
        "      num_trips  \n",
-       "501        2984  \n",
-       "1064        902  \n",
-       "707         254  \n",
-       "581        3979  \n",
-       "1709       3800  "
+       "462         759  \n",
+       "1290       3123  \n",
+       "1471        650  \n",
+       "979        4363  \n",
+       "666        1236  "
       ]
      },
      "execution_count": 2,
@@ -353,7 +353,7 @@
     "        model.fit(X_tt,y_tt)\n",
     "\n",
     "        # Make the prediction\n",
-    "        y_pred = reg.predict(X_val)\n",
+    "        y_pred = model.predict(X_val)\n",
     "        mse = mean_squared_error(y_val, y_pred)\n",
     "\n",
     "        total_mse += mse\n",
@@ -391,7 +391,7 @@
     {
      "data": {
       "text/plain": [
-       "489711.5566822436"
+       "480783.87063148303"
       ]
      },
      "execution_count": 10,
