Made an outline and added some code I worked on

--- a/models/final_report.ipynb
+++ b/models/final_report.ipynb
@@ -46,7 +46,71 @@
    "id": "c14510a1-311a-4700-a6c5-510fd773cecb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Data Manipulation Imports ###\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import dates as mdates\n",
+    "import seaborn as sns\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5205f9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Show Data Frame ###\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346bb012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Data Cleaning ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478ca56d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Remove Trend ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c43637b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Show Data ###\n",
+    "\n",
+    "fig, ax = plt.subplots(1,1,figsize = (10,5))\n",
+    "\n",
+    "ax.scatter(df.Date,df.total_num_trips)\n",
+    "\n",
+    "ax.xaxis.set_major_locator(mdates.YearLocator())\n",
+    "ax.xaxis.set_minor_locator(mdates.MonthLocator(bymonth=(1,4,7,10)))\n",
+    "plt.gcf().autofmt_xdate()\n",
+    "\n",
+    "ax.set_xlabel('Date')\n",
+    "ax.set_ylabel('Number of Trips')\n",
+    "ax.set_title('Number of Trips Over Time')\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +123,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9f0fb69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Modeling Imports ###\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression \n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.neighbors import KNeighborsRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "32352023-f296-4c11-b7c2-8fe906caab34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Train Test Split ###\n",
+    "\n",
+    "#? Linear features are total_precip, mean_dep_temp, and num_stations ??? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec3b4117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Basic Linear Regression ###\n",
+    "\n",
+    "linear_model = LinearRegression()\n",
+    "linear_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04dd1cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Linear Trig Regression ###\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1262909e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### KNN Regression ###\n",
+    "\n",
+    "k_values = range(2, 21)\n",
+    "#? Initialize a dictionary to hold the models and their RMS values\n",
+    "knr_models = {}\n",
+    "krms_values = {}\n",
+    "\n",
+    "#? Train a KNN model for each k value\n",
+    "for k in k_values:\n",
+    "    knr = KNeighborsRegressor(n_neighbors=k)\n",
+    "    knr.fit(X_train, y_train)\n",
+    "    y_pred_knr = knr.predict(X_train)\n",
+    "    \n",
+    "    #? Calculate the RMS for each model\n",
+    "    rms_knr = np.sqrt(mean_squared_error(y_train, y_pred_knr))\n",
+    "    \n",
+    "    #? Store the model and RMS in the dictionaries\n",
+    "    knr_models[k] = knr\n",
+    "    krms_values[k] = rms_knr\n",
+    "\n",
+    "print('Best K value:', min(krms_values, key=krms_values.get))\n",
+    "print('RMS:', krms_values[min(krms_values, key=krms_values.get)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9779521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Other Base Regression Models ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd82619f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Compare Base Models ###"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +233,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b9dd446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Fourier Regression ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de6defe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Tree ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e315b89-0064-405a-8810-6811fc23c180",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### AMIRA ###\n",
+    "# Imports\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "import statsmodels.tsa.api as sm\n",
+    "from pmdarima import auto_arima\n",
+    "\n",
+    "# Plot ACF and PACF\n",
+    "\n",
+    "fig, ax = plt.subplots(1,2,figsize = (10,5))\n",
+    "plot_acf(df.total_num_trips, ax = ax[0])\n",
+    "plot_pacf(df.total_num_trips, ax = ax[1])\n",
+    "\n",
+    "ax.set_xlabel('Lag')\n",
+    "ax.set_ylabel('Correlation')\n",
+    "ax.set_title('ACF and PACF of Total Number of Trips')\n",
+    "ax[0].set_title('ACF')\n",
+    "ax[1].set_title('PACF')\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# Chose best ARIMA Model hyperparameters\n",
+    "\n",
+    "residuals = y_train - best_model.predict(X_train)\n",
+    "\n",
+    "auto_arima(residuals, trace=True)\n",
+    "\n",
+    "# Fit ARIMA Model\n",
+    "arima_model = sm.ARIMA(residuals, order=(2,1,1)).fit()\n",
+    "arima.summary()\n",
+    "\n",
+    "# Fit SARIMA Model\n",
+    "\n",
+    "sarima_model = sm.SARIMAX(y_train, order=(2,1,1), seasonal_order=(1,1,1,7)).fit()\n",
+    "sarima_model.summary()\n",
+    "\n",
+    "\n",
+    "# Plot Predictions\n",
+    "\n",
+    "plt.scatter(df.Date,residuals,\n",
+    "            color='k',\n",
+    "            s=5,\n",
+    "            label='residuals'\n",
+    "            )\n",
+    "\n",
+    "plt.scatter(df.Date,sarima_model.fittedvalues,\n",
+    "            color='r',\n",
+    "            s=5,\n",
+    "            label='SARIMA_preds'\n",
+    "            )\n",
+    " \n",
+    "plt.scatter(df.Date,arima_model.fittedvalues,\n",
+    "            color='b',\n",
+    "            s=5,\n",
+    "            label='ARIMA_preds'\n",
+    "            )\n",
+    "\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Residual Values')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce1e0d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### SAMIRA ###"
+   ]
   },
   {
    "cell_type": "markdown",
