--- a/EDA/detrending_piecewise_tempseason_mult.ipynb
+++ b/EDA/detrending_piecewise_tempseason_mult.ipynb
@@ -1271,9 +1271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erdos_may_2024",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "erdos_may_2024"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1285,7 +1285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
