--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -643,13 +643,15 @@
    "source": [
     "This data, when viewed as a time series, exhibits clear seasonality and some upward trend (with an exception for the COVID outbreak in 2020 and recovery in 2021). In this version of EDA we'll exame how much of this seasonality is captured simply by the temperature. In order to do this we must first correct for the trend coming from pure bikeshare demand.\n",
     "\n",
-    "To look at this trend we have a few options:\n",
+    "To make a preliminary and crude look at this trend we have a few options:\n",
     "- A linear regression from 2017 to 2023,\n",
     "- Separate linear regressions from 2017 to 2020, 2020 to 2021, and 2021 to 2023-05,\n",
     "- Separate linear regressions from 2017 to 2020 and 2020 to 2023-05.\n",
     "- Some other regression fitting a base demand curve.\n",
     "\n",
-    "We will start with the first three, leaving in the seasonality component. When we do the last option we will remove the seasonality by differencing from 2017."
+    "We will start with the first three, leaving in the seasonality component. When we do the last option we will remove the seasonality by differencing from 2017.\n",
+    "\n",
+    "NOTE: In other notebooks in the ``EDA`` folder we perform better, more accurate trend predictions and adjustments. The version we do in this notebook works fine for training data (but will forecast poorly for test data, as one can see further down in this notebook--the forecast for 2024 would be very, very high since the base demand curve we eventually find has increasing slope near the end of the training data). Thus this version of de-trend is preliminary and only used for feature selection and importance; see the other notebooks for better de-trendings."
    ]
   },
   {
