Written to Final Report

--- a/models/final_report.ipynb
+++ b/models/final_report.ipynb
@@ -241,13 +241,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7284d834",
+   "metadata": {},
+   "source": [
+    "## Tree Based Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7771f42b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Tree ###\n",
+    "# adapt dataframe name if not consistent with the variable names this notebook defined\n",
+    "# bike_train = \n",
+    "# bike_test = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "890c73cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Decision Tree Regressor ###\n",
+    "from sklearn.tree import DecisionTreeRegressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4de6defe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Tree ###"
+    "### Decision Tree Regressor ###\n",
+    "\n",
+    "tree = DecisionTreeRegressor(max_depth = 6, random_state = 16)\n",
+    "tree.fit(bike_train[['max_temp', 'total_precip']], bike_train['adj_num_trips'])\n",
+    "pred = tree.predict(bike_test[['max_temp', 'total_precip']])\n",
+    "fig, ax = plt.subplots(figsize=(12,6))\n",
+    "sns.scatterplot(x=bike_test['Date'], y=bike_test['num_trips'], color='blue', ax=ax, label='true value')\n",
+    "sns.scatterplot(x=bike_test['Date'], y=pred*bike_test['trend_val'], color='orange', ax=ax, alpha=0.8, label='predicted value')\n",
+    "\n",
+    "plt.title('Model Prediction on Test Data')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3efa809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The rmse of the decision tree regressor model on test data is ', np.sqrt(mean_squared_error(bike_test['num_trips'], pred*bike_test['trend_val'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae4882ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Gradient Boosting ###\n",
+    "%pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524da10e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Gradient Boosting ###\n",
+    "from xgboost import XGBRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d16ea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_reg = XGBRegressor(learning_rate=0.1, max_depth=1, n_estimators=200, random_state = 16)\n",
+    "xgb_reg.fit(bike_train[['max_temp', 'total_precip', 'day_length', 'max_gust']], bike_train['adj_num_trips'])\n",
+    "pred = xgb_reg.predict(bike_test[['max_temp', 'total_precip', 'day_length', 'max_gust']])\n",
+    "fig, ax = plt.subplots(figsize=(12,6))\n",
+    "sns.scatterplot(x=bike_test['Date'], y=bike_test['num_trips'], color='blue', ax=ax, label='true value')\n",
+    "sns.scatterplot(x=bike_test['Date'], y=pred*bike_test['trend_val'], color='orange', ax=ax, alpha=0.8, label='predicted value')\n",
+    "ax.set_ylim(bottom=0, top=9000)\n",
+    "plt.title('XGBoost Model Prediction on Test Data')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96283da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('The rmse of xgb boost model on test data is ', np.sqrt(mean_squared_error(pred*bike_test['trend_val'], bike_test['num_trips'])))"
    ]
   },
   {
@@ -394,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
